<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Android BLE</string>
    <string name="skip">Skip</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user">New User?</string>
    <string name="signup_here">Signup Here</string>
    <string name="or">OR</string>
    <string name="product_name">Mi A2 (Gold, 4GB RAM, 64GB Storage)</string>
    <string name="highlights">Highlights</string>
    <string name="mrp_price"><strike>\u20B9 16,856</strike></string>
    <string name="product_description">  &#8226; 4 GB RAM | 64 GB ROM |\n&#8226; 15.21 cm (5.99 inch) FHD+ Display\n&#8226; 20MP + 12MP | 20MP Front Camera\n&#8226; 3010 mAh Battery\n&#8226; Qualcomm Snapdragon 660 Octacore Processor\n</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="product_price">\u20B9 16,181</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="create_account">Create Account</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">BLE State:</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="NA">N/A</string>
    <string name="label_artikcloud_deviceid">ARTIK Cloud Device ID:</string>
    <string name="menu_logout_cloud">Logout</string>
    <string name="menu_connect">BLE Connect</string>
    <string name="menu_disconnect">BLE Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="dont_have_account" tools:ignore="StringEscaping">Don"'"t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="buy_now">BUY NOW</string>

    <string name="product_image">Product Image</string>
    <string-array name="size">
        <item>Size</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string-array name="quantity">
        <item>Quantity</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_password">Enter your password</string>
</resources>
