<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SignInActivity"
    android:background="#f4f7f9">
    <TextView
        android:id="@+id/text_view_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/padding_normal_8"
        android:layout_marginTop="@dimen/padding_normal_8"
        android:textColor="@color/text_color"
        android:fontFamily="sans-serif"
        />
        <android.support.v7.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/padding_extra_large_20"
            android:layout_marginRight="@dimen/padding_extra_large_20"
            android:background="@color/white_color"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingTop="@dimen/padding_too_large_30"
                android:paddingBottom="@dimen/padding_too_large_30"
                >
            <EditText
                android:id="@+id/edit_text_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_too_large_30"
                android:layout_marginLeft="@dimen/padding_too_large_30"
                android:layout_marginRight="@dimen/padding_too_large_30"
                android:hint="@string/phone_number"
                android:drawableLeft="@mipmap/baseline_account_circle_black"
                android:textColorHighlight="@color/grey_color"
                android:textColorLink="@color/grey_color"
                android:shadowColor="@color/grey_color"
                android:textColorHint="@color/grey_color"
                android:fontFamily="sans-serif"
                />


            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_text_phone_number"
                android:layout_marginTop="@dimen/padding_large_15"
                android:layout_marginLeft="29dp"
                android:layout_marginRight="@dimen/padding_too_large_30"
                android:hint="@string/password"
                android:drawableLeft="@mipmap/baseline_lock_black"
                android:textColorHighlight="@color/grey_color"
                android:textColorLink="@color/grey_color"
                android:shadowColor="@color/grey_color"
                android:textColorHint="@color/grey_color"
                android:password="true"
                android:fontFamily="sans-serif"
                />
            <Button
                android:id="@+id/text_view_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_text_password"
                android:layout_marginTop="@dimen/padding_extra_large_20"
                android:text="@string/login"
                android:gravity="center"
                android:background="@drawable/rounded_green_login"
                android:textColor="@color/white_color"
                android:layout_marginLeft="@dimen/padding_50"
                android:layout_marginRight="@dimen/padding_50"
                android:clickable="true"
                android:paddingTop="@dimen/padding_medium_10"
                android:paddingBottom="@dimen/padding_medium_10"
                android:fontFamily="sans-serif"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Forgot Password?"
                    android:textColor="@color/grey_color"
                    android:layout_below="@id/text_view_login"
                    android:layout_marginTop="@dimen/padding_medium_10"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/padding_50"
                    android:fontFamily="sans-serif"
                    />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_account"
        android:textColor="@color/grey_color"
        android:layout_below="@+id/cardview"
        android:layout_marginTop="@dimen/padding_medium_10"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_marginTop="@dimen/padding_medium_10"
        android:layout_below="@+id/cardview"
        android:layout_toRightOf="@+id/account"
        android:fontFamily="sans-serif"/>
</RelativeLayout>