<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_color"
    >

    <TextView
        android:id="@+id/text_view_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/product_name"
        android:textSize="15sp"
        android:paddingTop="@dimen/padding_large_15"
        android:paddingBottom="@dimen/padding_large_15"
        android:background="@color/colorPrimary"
        android:textColor="@color/white_color"
        android:textStyle="bold"
        android:textAllCaps="true"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_product_name"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.v7.widget.CardView
                android:id="@+id/cardview1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_color"
                android:layout_marginLeft="@dimen/padding_medium_10"
                android:layout_marginRight="@dimen/padding_medium_10"
                app:cardCornerRadius="10dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white_color"
                    android:paddingTop="@dimen/padding_medium_10"
                    android:paddingBottom="@dimen/padding_medium_10"
                    >
                    <android.support.v4.view.ViewPager
                        android:id="@+id/image_view_product_image"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/product_image_height_250">

                    </android.support.v4.view.ViewPager>
                    <TextView
                        android:id="@+id/text_product_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_name"
                        android:layout_marginTop="@dimen/padding_small_5"
                        android:layout_marginStart="@dimen/padding_medium_10"
                        android:textSize="20sp"
                        android:layout_below="@+id/image_view_product_image"
                        android:textColor="@color/header"
                        />
                    <TextView
                        android:id="@+id/text_product_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_price"
                        android:layout_marginTop="@dimen/padding_small_5"
                        android:layout_marginRight="@dimen/padding_medium_10"
                        android:textSize="20sp"
                        android:layout_below="@+id/text_product_name"
                        android:textColor="@color/black_color"
                        android:textStyle="bold"
                        android:layout_marginLeft="@dimen/padding_medium_10"
                        />
                    <TextView
                        android:id="@+id/MRP_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mrp_price"
                        android:layout_marginTop="8dp"
                        android:layout_below="@+id/text_product_name"
                        android:layout_toEndOf="@+id/text_product_price"
                        android:textColor="@color/description"
                        />
                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cardview2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardview1"
                android:layout_marginTop="@dimen/padding_medium_10"
                android:layout_marginLeft="@dimen/padding_medium_10"
                android:layout_marginRight="@dimen/padding_medium_10"
                android:background="@color/white_color"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white_color">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/highlights"
                        android:textColor="@color/black_color"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_marginStart="@dimen/padding_medium_10"
                        android:layout_marginTop="@dimen/padding_extra_large_20"
                        />

                    <TextView
                        android:id="@+id/text_product_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_description"
                        android:layout_marginTop="@dimen/padding_small_5"
                        android:layout_marginLeft="@dimen/padding_medium_10"
                        android:layout_marginRight="@dimen/padding_medium_10"
                        android:textSize="@dimen/text_size_extra_large_15"
                        android:textColor="@color/text_color"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_below="@+id/cardview2"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                />
        </RelativeLayout>

    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="100"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:paddingTop="@dimen/padding_large_15"
            android:paddingBottom="@dimen/padding_large_15"
            android:text="@string/add_to_cart"
            android:textColor="@color/black_color"
            android:background="@color/white_color"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:paddingTop="@dimen/padding_large_15"
            android:paddingBottom="@dimen/padding_large_15"
            android:text="@string/buy_now"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:textColor="@color/white_color"
            />
    </LinearLayout>
</RelativeLayout>